Additions and improvements