@@ -18,7 +18,7 @@ public class Map {
 		
 		List<Integer> number = Arrays.asList(2,3,4,5);
 		
-		List<Integer> square = number.stream().map(x->x*x).collect(Collectors.toList());
+		List<Integer> square = number.stream().map(x->x*x).toList();
 		
 		square.forEach(System.out::println);
 
